# practice

./: .gitignore  README.md  TODO.md  \
bun-dates/: date-count.js
bun-md/: TODO.md  index.html
bun-md/src/: index.ts
bun-xml/: index.ts  morph.test.ts  morph.ts  package.json  typing.ts
dotnet-api/: docker-compose.yaml
dotnet-api/RainfallAPI/: Program.cs  RainfallAPI.csproj  appsettings.Development.json
dotnet-api/RainfallAPI/Data/: AppDbContext.cs  HabitRepo.cs  IHabitRepo.cs
dotnet-api/RainfallAPI/Dtos/: HabitCreateDto.cs  HabitReadDto.cs  HabitUpdateDto.cs
dotnet-api/RainfallAPI/Migrations/: 20220915020008_InitialCreate.Designer.cs  20220915020008_InitialCreate.cs  AppDbContextModelSnapshot.cs
dotnet-api/RainfallAPI/Models/: Habit.cs  ModelBase.cs  Person.cs  Recording.cs  Station.cs  Unit.cs
go-client/: go.mod  main.go
go-http/: go.mod  main.go  main_test.go
js-express/todos_example/: README.md  bun.lockb  curl.sh  models.ts  package.json  server.ts  todos.test.ts
make/: Makefile
py-sqlalchemy/: Makefile  pyproject.toml
py-sqlalchemy/src/: main.py  models.py
rust-axum/: .gitignore  Cargo.toml  TODO.md
rust-axum/.sqlx/: query-19b4bbe2f15ba0a929ad9b9aa77ca68da3b6481f280b342232d90eb87142599e.json  query-6f540be5517aaffe1774bebe9a2c0eba835e11cd8e1b07ea44046ae795008704.json  query-b7dde8f0be46cc7de0283d919778beea3a5a8957c19e2059b200c4c6462445b9.json
rust-axum/db/: seed.sql
rust-axum/migrations/: 20250716011349_init.sql
rust-axum/src/: auth.rs  config.rs  credentials.rs  error.rs  health.rs  main.rs  profile.rs  types.rs  user.rs  users.rs
rust-cards/: Cargo.toml
rust-cards/src/: lib.rs
rust-core-drafts/: Cargo.toml
rust-core-drafts/src/: draft.rs  error.rs  main.rs  share.rs
rust-egui/: Cargo.toml
rust-egui-markdown/: Cargo.toml
rust-egui-markdown/src/: doc.rs  editor.rs  fs.rs  main.rs
rust-egui-markdown/src/editor/: highlighter.rs
rust-egui-text/: Cargo.toml
rust-egui-text/src/: main.rs
rust-egui/src/: components.rs  main.rs  pdf.rs
rust-leptos-csr/: Cargo.toml  Makefile  Trunk.toml  index.html  package-lock.json  tailwind.config.js
rust-leptos-csr/src/: app.rs  main.rs
rust-leptos-ssr-axum/: Cargo.toml  README.md
rust-leptos-ssr-axum/src/: app.rs  lib.rs  main.rs  users.rs
rust-leptos-vehicle-fuel-calc/: Cargo.toml  Justfile  README.md  index.html  tailwind.config.js  tailwind.css
rust-leptos-vehicle-fuel-calc/src/: main.rs  style.css
rust-serde/: Cargo.toml
rust-serde/src/: cli.rs  error.rs  fs.rs  lib.rs  main.rs  service.rs
rust-spacetime/: Cargo.toml
rust-spacetime/src/: main.rs
rust-task-runner/: Cargo.toml  README.md
rust-task-runner/src/: main.rs  tasks.rs
(+6 files in other folders)
