[package]
name = "rust-egui-markdown"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
dirs = "6.0.0"
eframe = { git = "https://github.com/emilk/egui", branch = "main" }
egui = "0.32.0"
egui_demo_lib = "0.32.0"
rfd = "0.15.4"
ropey = "2.0.0-beta.1"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.13"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
