[package]
name = "test-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = {version = "2.0.1", features = ["derive", "serde"]}
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5.57"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.14"

[[bin]]
name = "test-daemon"
path = "src/main.rs"
